--- a/css/main.css
+++ b/css/main.css
@@ -4,3 +4,16 @@ body {
   padding: 0;
   box-sizing: border-box;
 }
+
+h1 {
+  font-size: 3em;
+}
+
+h2 {
+  font-size: 2.5em;
+}
+
+p {
+  margin-top: 0;
+  margin-bottom: 15px;
+}
