--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+:root {
+  --color-main: #000;
+  --color-accent: #ff00c8;
+  --container-width: 1400px;
+}
+
 html,
 body {
   margin: 0;
@@ -16,4 +22,4 @@ h2 {
 p {
   margin-top: 0;
   margin-bottom: 15px;
-}
+}/*# sourceMappingURL=main.css.map */
