--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,9 @@
 :root {
   --color-main: #000;
   --color-accent: #ff00c8;
+
   --container-width: 1400px;
+  --container-paddings: 20px;
 }
 
 html,
