--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
 :root {
   --color-main: #000;
   --color-accent: #ff00c8;
-
   --container-width: 1400px;
   --container-paddings: 20px;
+  --bg-white: #fff;
 }
 
 html,
