добавил переменную в стили, удалил файл map

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,11 +1,10 @@
 :root {
   --color-main: #000;
   --color-accent: #ff00c8;
-
   --container-width: 1400px;
   --container-paddings: 20px;
-
   --bg-white: #fff;
+  --bg-dark: #1c1c1c;
 }
 
 html,
