--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
   --container-width: 1400px;
   --container-paddings: 20px;
   --bg-white: #fff;
+  --bg-dark: #1c1c1c;
 }
 
 html,
@@ -24,4 +25,4 @@ h2 {
 p {
   margin-top: 0;
   margin-bottom: 15px;
-}/*# sourceMappingURL=main.css.map */
+}
